--- a/serverless.yml
+++ b/serverless.yml
@@ -17,3 +17,5 @@ functions:
     events:
       - http: ANY /
       - http: 'ANY /{proxy+}'
+  layers:
+        - arn:aws:lambda:eu-west-1:113088814899:layer:Klayers-python37-Pillow:11
