--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ Flask>=1.1.2
 dash
 serverless-wsgi>=2.0.2
 tensorflow-cpu
-#Pillow
-imageio # replaces nightmare Pillow
+Pillow
+imageio # to replace load_img / PIL nightmare issues
