--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ dash
 serverless-wsgi>=2.0.2
 tensorflow-cpu
 Pillow
-imageio # to replace load_img / PIL nightmare issues
+imageio[pyav] # to replace load_img / PIL nightmare issues [pyav] is recommended plugin
