--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ Flask>=1.1.2
 dash
 serverless-wsgi>=2.0.2
 tensorflow-cpu
+requests
+io
 Pillow
 imageio[pyav] # to replace load_img / PIL nightmare issues [pyav] is recommended plugin
