--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ serverless-wsgi>=2.0.2
 tensorflow-cpu
 requests
 Pillow
-imageio # use imageio[pyav] as [pyav] is recommended plugin ?
+imageio[pyav]
