--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ serverless-wsgi>=2.0.2
 tensorflow-cpu
 requests
 Pillow
-imageio[pyav]
+pip install opencv-python-headless
+#imageio[pyav]
+#imageio[opencv]
