--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ serverless-wsgi>=2.0.2
 tensorflow-cpu
 requests
 Pillow
-pip install opencv-python-headless
+opencv-python-headless
 #imageio[pyav]
 #imageio[opencv]
