--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ serverless-wsgi>=2.0.2
 tensorflow-cpu
 requests
 Pillow
-opencv-python-headless
+# opencv-python-headless
+imageio
 #imageio[pyav]
 #imageio[opencv]
