--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 Flask>=1.1.2
-dash
 serverless-wsgi>=2.0.2
-tensorflow-cpu
-requests
+boto3
 Pillow
-# opencv-python-headless
-imageio[pyav]
-#imageio[opencv]
+tensorflow-cpu
